--- a/trash.conf
+++ b/trash.conf
@@ -11,3 +11,4 @@ github.com/pkg/errors v0.7.0
 k8s.io/client-go v4.0.0 transitive=true
 github.com/docker/distribution 3da015f8aaa8653690917031108bd45a2bed5cfa
 github.com/opencontainers/go-digest v1.0.0-rc1
+github.com/rancher/kubectld/cli af773c87d5607f5bdb65a6c36d459c64e865c963
